--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li routerLinkActive="active"><a routerLink="">Home</a></li>
+        <li routerLinkActive="active"><a routerLink="/home">Home</a></li>
         <li routerLinkActive="active"><a routerLink="/cars">Cars</a></li>
         <li routerLinkActive="active"><a routerLink="/admin">Admin</a></li>
       </ul>
