commiting the final changes

--- a/src/app/admin/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin/admin-dashboard/admin-dashboard.component.html
@@ -1,2 +1,3 @@
 <h2>Admin Dashboard</h2>
 <p class="text-muted">Admin area</p>
+<!--<a routerLink="secret" class="link">Super secret component</a>-->
