--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,6 @@
 <div class="row">
   <div class="col-md-12">
     <router-outlet></router-outlet>
+    <router-outlet name="secondary"></router-outlet>
   </div>
 </div>
